force-app/main/default/objects/GiftDesignation/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <inlineHelpText>General ledger cost center this designation is attributed to. Applied to every Gift Transaction Designation that points at this designation.</inlineHelpText>
    <label>Cost Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>