force-app/main/default/objects/GiftDesignation/fields/Restriction_Type__c.field-meta.xml
<CustomField>
    <fullName>Restriction_Type__c</fullName>
    <description>Classifies each program&apos;s funding restriction</description>
    <label>Restriction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>Unrestricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>