force-app/main/default/objects/GiftDesignation/fields/Revenue_Code__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Code__c</fullName>
    <inlineHelpText>General ledger revenue code this designation posts to. Applied to every Gift Transaction Designation that points at this designation.</inlineHelpText>
    <label>Revenue Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>